@@ -8,3 +8,6 @@ Makefile
 test-ditem
 desktop-item-boot
 GNOME_Moniker_std.oaf.in
+*.server.in
+*.server
+bonobo-moniker-ditem
