@@ -1,5 +1,12 @@
 2001-08-28  Martin Baulig  <baulig@suse.de>
 
+	* Bonobo_Moniker_ditem.server.in.in: New file.
+
+	* bonobo-config-ditem.[ch]: Merged some stuff from the
+	gnome-core/gnome-desktop version
+
+2001-08-28  Martin Baulig  <baulig@suse.de>
+
 	* bonobo-config-ditem-utils.[ch], bonobo-config-ditem.[ch],
 	bonobo-moniker-ditem.c, test-ditem.c: Put this back.
 
